samples/_failures_safe/1761437661_271349_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40c2160d.c: In function ‘determinant_matrix’:
./samples/SAFE/__tmp_40c2160d.c:146: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_40c2160d.c:145:5: error: expected declaration or statement at end of input
  145 |     if
      |     ^~
